README initial content upload + cleanup of other files

--- a/mArch_demo.ipynb
+++ b/mArch_demo.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The demo estimates and forecasts the volatility of daily returns for the FTSE100, the Nikkei and the S&P500 using a multivariate DCCA specification based on univariate GARCH processes.\n",
     "\n",
-    "Let's start by importing the existing `arch` toolbox's implementation of the univeriate GARCH model and the `mArch` toolbox itself. `pandas` is not required for estimation (a `numpy` array would work fine), but simplifies the handling of the underlying dataset."
+    "Let's start by importing the existing `arch` toolbox's implementation of the univeriate GARCH model and the `mArch` toolbox itself. `pandas` simplifies the handling of the underlying dataset."
    ]
   },
   {
